<resources>
    <string name="app_name">Football</string>
    <string name="app_desc">lorem ipsum dolor sit amet</string>
    <string name="description_sub_title">Description</string>
    <string-array name="football_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string name="league">League</string>
    <string name="event">Event</string>
    <string name="win">Win:</string>
    <string name="loss">Loss:</string>
    <string name="draw">Draw:</string>
    <string name="location">Location</string>
    <string name="capacity">Capacity</string>
</resources>