<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="androidx.fragment.app.FragmentActivity" />

        <variable
            name="viewModel"
            type="com.github.nothing2512.football_v2.ui.loved.LovedViewModel" />

        <import
            alias="constants"
            type="com.github.nothing2512.football_v2.utils.Constants" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content"
        android:scrollbars="none"
        tools:context=".ui.home.activity.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imBackground"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_background_height"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:scaleX="-1"
                android:src="@drawable/background_gradient"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btBackHome"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:onClick="@{() -> activity.onBackPressed()}"
                android:padding="@dimen/spacing"
                android:src="@drawable/left_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_text_spacing"
                android:layout_marginBottom="@dimen/double_spacing"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imBackground" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_spacing"
                android:layout_marginBottom="@dimen/double_spacing"
                android:text="@string/app_desc"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <ImageView
                android:id="@+id/imContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/main_content"
                app:layout_constraintBottom_toTopOf="@id/content"
                app:layout_constraintTop_toTopOf="@id/tvLeagueLoved"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/dummyView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_dummy_height"
                android:translationZ="-2dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLeagueLoved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setFragment(constants.STATE_LEAGUE)}"
                android:paddingStart="@dimen/spacing"
                android:paddingTop="@dimen/double_spacing"
                android:paddingEnd="@dimen/spacing"
                android:text="@string/league"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/tvEvent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dummyView" />

            <TextView
                android:id="@+id/tvEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setFragment(constants.STATE_EVENT)}"
                android:paddingStart="@dimen/spacing"
                android:paddingTop="@dimen/double_spacing"
                android:paddingEnd="@dimen/spacing"
                android:text="@string/event"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLeagueLoved"
                app:layout_constraintTop_toBottomOf="@id/dummyView" />

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginStart="@dimen/double_spacing"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginEnd="@dimen/double_spacing"
                android:src="@color/main_grey"
                app:layout_constraintTop_toBottomOf="@id/tvLeagueLoved"
                tools:ignore="ContentDescription" />

            <FrameLayout
                android:id="@+id/content"
                activity="@{activity}"
                fragment="@{viewModel.fragment}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_spacing"
                android:background="@color/content"
                android:focusable="false"
                android:nestedScrollingEnabled="false"
                android:padding="@dimen/spacing"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>